--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <body>
     <div class="container">
         <h1>欢迎来到郭家乐的页面</h1>
-        <img src="your-image-url.jpg" alt="示例图片" class="responsive-image">
+        <img src="./11111.jpg" alt="示例图片" class="responsive-image">
         <p>随便写两句。</p
         <p>感谢您的访问！</p>
     </div>
