--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>曲江陈年茅台交易</title>
+    <title>西北陈年茅台交易中心</title>
     <link rel="stylesheet" href="styles.css">
     <style>
       /* 重置样式，确保不同浏览器的一致性 */
@@ -67,9 +67,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>欢迎来到郭家乐的页面</h1>
+        <h1>地址：曲江芙蓉南路金地芙蓉世家北门对面</h1>
         <img src="./11111.jpg" alt="示例图片" class="responsive-image">
-        <p>随便写两句。</p
+        <p>联系电话：188888888</p
         <p>感谢您的访问！</p>
     </div>
 </body>
